--- a/index.html
+++ b/index.html
@@ -235,23 +235,19 @@
 
 <section id="promise" class="slogan">
   <div class="container">
+
     <div class="slogan-text">
       <h2 class="slogan__title">Satisfaction Guaranteed:</h2>
       <h5 class="slogan__title--sub">All Captain Jon's Green Can Lockers come with a 100% satisfaction guarantee. If for any reason you are not satisfied return the locker to us and we will reimburse you for the postage and the locker.</h5>
     </div><!-- end of .slogan-text -->
+
   </div><!-- end of .container -->
 </section><!-- end of .slogan -->
 
 
 
 
-<section>
-  <div class="container-fluid">
-    <div class="col-md-12">
-      <div id="my-video-display"></div>
-    </div>
-  </div>
-</section>
+
 
 
 <section>
@@ -265,6 +261,31 @@
       <div class="col-xs-12 col-md-4 image__section">
         <img class="image__section--images img-responsive" src="img/DSC_0026.jpg" alt="">
       </div>
+  </div>
+</section>
+
+
+
+
+
+<section class="boxes">
+<div class="container-fluid">
+
+<div class="row flexbg"> <!-- Top Row of Box's -->
+
+<div class="col-xs-12 col-md-6 boxes__box--2 Aligner">
+  <div class="Aligner-item" id="my-video-display">
+      <iframe width="425" height="349" src="http://www.youtube.com/embed/FKWwdQu6_ok" frameborder="0" allowfullscreen></iframe>
+    </div>
+</div>
+
+<div class="col-xs-12 col-md-6 boxes__box--1 Aligner">
+  <div class="Aligner-item">
+    <img class="img-responsive" src="img/video_cover.jpg" alt="">
+  </div>
+</div>
+    
+  </div>
   </div>
 </section>
 
