removed unused photos

--- a/src/index.html
+++ b/src/index.html
@@ -42,7 +42,7 @@
 			<!-- Collect the nav links, forms, and other content for toggling -->
 			<div class="navbar-collapse collapse" id="bs-example-navbar-collapse-1">
 				<div class="header__bg visible-lg visible-md">
-					<img class="header__bg--logo" src="img/main-logo.png" alt="">
+					<img class="header__bg--logo" src="img/branding/main-logo.png" alt="">
 				</div>
 				<div id="header__bg" class="visible-lg visible-md">&nbsp;</div>
 				<ul class="nav navbar-nav navbar-right">
@@ -123,8 +123,8 @@
 
 				<div class="col-xs-12 col-md-6 boxes__box--2 aligner">
 					<div class="aligner-item">
-						<img src="img/ebay-icon.png">
-						<a href="http://www.ebay.com/itm/Ammo-Box-Can-Lock-Hardware-2nd-Gen-fits-all-50-Cal-30-Cal-20-mm-40-mm-/271622668001">
+						<img src="img/ebay/ebay-logo--circle.png">
+						<a href="https://www.ebay.com/itm/Ammo-Box-Can-Lock-Hardware-2nd-Gen-fits-all-50-Cal-30-Cal-20-mm-40-mm-/271622668001">
 							<button class="btn" type="button">Buy on Ebay</button>
 						</a>
 						<!--<div class="section-mask"></div> -->
@@ -148,7 +148,7 @@
 							<h4>"Awsome seller with a great product,he REALLY APPRECIATES his customers A++++++++"</h4>
 							<footer>
 								<span style="testimonial-author">Member ID: dennis1047</span>
-								<img src='http://pics.ebaystatic.com/aw/pics/icon/iconTealStar_25x25.gif' style="display: inline; width:30px;height:30;vertical-align:middle">
+								<img src='img/ebay/stars/iconTealStar_25x25.gif' style="display: inline; width:30px;height:30;vertical-align:middle">
 							</footer>
 						</div>
 						<div>
@@ -156,7 +156,7 @@
 							<h4>"Outstanding Product! Outstanding Seller! Very Fast Shipper! Highly Recommended!"</h4>
 							<footer>
 								<span style="testimonial-author">Member ID: piratec</span>
-								<img src='http://pics.ebaystatic.com/aw/pics/icon/iconRedStar_25x25.gif' style="display: inline; width:30px;height:30;vertical-align:middle">
+								<img src='img/ebay/stars/iconRedStar_25x25.gif' style="display: inline; width:30px;height:30;vertical-align:middle">
 							</footer>
 						</div>
 						<div>
@@ -164,7 +164,7 @@
 							<h4>"This will be my third purchase of this item, makes for a strong lockable box"</h4>
 							<footer>
 								<span style="testimonial-author">Member ID: marc780780</span>
-								<img src='http://pics.ebaystatic.com/aw/pics/icon/iconBlueStar_25x25.gif' style="display: inline; width:30px;height:30;vertical-align:middle">
+								<img src='img/ebay/stars/iconBlueStar_25x25.gif' style="display: inline; width:30px;height:30;vertical-align:middle">
 							</footer>
 						</div>
 						<div>
@@ -172,7 +172,7 @@
 							<h4>"Thumbs up!!! Great product. Greetings from Norway!"</h4>
 							<footer>
 								<span style="testimonial-author">Member ID: petterpgo</span>
-								<img src='http://pics.ebaystatic.com/aw/pics/icon/iconTealStar_25x25.gif' style="display: inline; width:30px;height:30;vertical-align:middle">
+								<img src='img/ebay/stars/iconTealStar_25x25.gif' style="display: inline; width:30px;height:30;vertical-align:middle">
 							</footer>
 						</div>
 						<div>
@@ -180,7 +180,7 @@
 							<h4>"Very well made product! Will buy more and recommend this seller highly"</h4>
 							<footer>
 								<span style="testimonial-author">Member ID: spygate4</span>
-								<img src='http://pics.ebaystatic.com/aw/pics/icon/iconTealStar_25x25.gif' style="display: inline; width:30px;height:30;vertical-align:middle">
+								<img src='img/ebay/stars/iconTealStar_25x25.gif' style="display: inline; width:30px;height:30;vertical-align:middle">
 							</footer>
 						</div>
 						<div>
@@ -188,7 +188,7 @@
 							<h4>"Excellent design and craftsmanship at a very reasonable price. Thank you!!"</h4>
 							<footer>
 								<span style="testimonial-author">Member ID: thedeerslayer77</span>
-								<img src='http://pics.ebaystatic.com/aw/pics/icon/iconYellowStar_25x25.gif' style="display: inline; width:30px;height:30;vertical-align:middle">
+								<img src='img/ebay/stars/iconYellowStar_25x25.gif' style="display: inline; width:30px;height:30;vertical-align:middle">
 							</footer>
 						</div>
 						<div>
@@ -196,7 +196,7 @@
 							<h4>"It is such a good product I had to buy another. Great buyer, shipped quickly."</h4>
 							<footer>
 								<span style="testimonial-author">Member ID: williamenichols</span>
-								<img src='http://pics.ebaystatic.com/aw/pics/icon/iconTealStar_25x25.gif' style="display: inline; width:30px;height:30;vertical-align:middle">
+								<img src='img/ebay/stars/iconTealStar_25x25.gif' style="display: inline; width:30px;height:30;vertical-align:middle">
 							</footer>
 						</div>
 						<div>
@@ -204,7 +204,7 @@
 							<h4>"Quality items! Well packaged with lightning fast shipping. A+ service. Thank you"</h4>
 							<footer>
 								<span style="testimonial-author">Member ID: greatronin</span>
-								<img src='http://pics.ebaystatic.com/aw/pics/icon/iconRedStar_25x25.gif' style="display: inline; width:30px;height:30;vertical-align:middle">
+								<img src='img/ebay/stars/iconRedStar_25x25.gif' style="display: inline; width:30px;height:30;vertical-align:middle">
 							</footer>
 						</div>
 						<div>
@@ -212,7 +212,7 @@
 							<h4>"3rd order so far! These are very high quality and fit my cans perfectly."</h4>
 							<footer>
 								<span style="testimonial-author">Member ID: shawncollins</span>
-								<img src='http://pics.ebaystatic.com/aw/pics/icon/iconTealStar_25x25.gif' style="display: inline; width:30px;height:30;vertical-align:middle">
+								<img src='img/ebay/stars/iconTealStar_25x25.gif' style="display: inline; width:30px;height:30;vertical-align:middle">
 							</footer>
 						</div>
 						<div>
@@ -220,7 +220,7 @@
 							<h4>"Excellente transaction !!!! Tout réellement parfait !!!! GREAT EBAYER !!!!"</h4>
 							<footer>
 								<span style="testimonial-author">Member ID: arietge</span>
-								<img src='http://pics.ebaystatic.com/aw/pics/icon/iconRedStar_25x25.gif' style="display: inline; width:30px;height:30;vertical-align:middle">
+								<img src='img/ebay/stars/iconRedStar_25x25.gif' style="display: inline; width:30px;height:30;vertical-align:middle">
 							</footer>
 						</div>
 						<div>
@@ -228,7 +228,7 @@
 							<h4>"Very cool item,shipped quickly & as described.Would buy from again. Thank you"</h4>
 							<footer>
 								<span style="testimonial-author">Member ID: bill53cars</span>
-								<img src='http://pics.ebaystatic.com/aw/pics/icon/iconPurpleStar_25x25.gif' style="display: inline; width:30px;height:30;vertical-align:middle">
+								<img src='img/ebay/stars/iconPurpleStar_25x25.gif' style="display: inline; width:30px;height:30;vertical-align:middle">
 							</footer>
 						</div>
 
@@ -298,7 +298,7 @@
 				<!-- Top Row of Box's -->
 				<div class="col-xs-12 col-md-6" style="padding: 0px;">
 					<div id="my-video-display">
-						<iframe width="425" height="349" src="http://www.youtube.com/embed/1cwKcvOMq7I" frameborder="0" allowfullscreen></iframe>
+						<iframe width="425" height="349" src="https://www.youtube.com/embed/1cwKcvOMq7I" frameborder="0" allowfullscreen></iframe>
 					</div>
 				</div>
 
@@ -416,10 +416,10 @@
 			<h3 class="text-center footer__slogan">Remember - <em>"when you mean it, <span style='color: #748247; font-weight: 700;'>Green</span>
 					it!"</em></h3>
 			<ul class="list-inline">
-				<li><img class="footer-logo img-responsive" src="img/main-logo.png" alt=""></li>
-				<li><img class="tr-logo img-responsive" src="img/tr-logo.png" alt=""></li>
+				<li><img class="footer-logo img-responsive" src="img/branding/main-logo.png" alt=""></li>
+				<li><img class="tr-logo img-responsive" src="img/branding/tr-logo.png" alt=""></li>
 				<li class="tr-section">
-					<h5>Created by <a href="http://taylorradtke.com/">Taylor Radtke</a></h5>
+					<h5>Created by <a href="https://taylorradtke.com/">Taylor Radtke</a></h5>
 					<h5>&copy; 2015 | All Rights Reserved</h5>
 				</li>
 				<li class="icon-shell"><a href="https://www.facebook.com/greencanlockers?fref=ts"><i class="fa fa-facebook"></i></a></li>
